--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,36 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+<web-app version="2.5" 
+	xmlns="http://java.sun.com/xml/ns/javaee" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+  <servlet>
+    <servlet-name>Validate</servlet-name>
+    <servlet-class>Project.Validate</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>Welcome</servlet-name>
+    <servlet-class>Project.Welcome</servlet-class>
+  </servlet>
 
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
 
-	<servlet>
-		<servlet-name>login</servlet-name>
-		<servlet-class>Project.Login</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>Welcome</servlet-name>
-		<servlet-class>Project.Welcome</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>login</servlet-name>
-		<url-pattern>/login</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Welcome</servlet-name>
-		<url-pattern>/Welcome</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-		<servlet-name>register</servlet-name>
-		<servlet-class>Project.Register</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>register</servlet-name>
-		<url-pattern>/register</url-pattern>
-	</servlet-mapping>
-
+  <servlet-mapping>
+    <servlet-name>Validate</servlet-name>
+    <url-pattern>/loginServlet1</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Welcome</servlet-name>
+    <url-pattern>/loginServlet2</url-pattern>
+  </servlet-mapping>
+ 
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
+  
 </web-app>
